2002-05-04  Han-Wen  <hanwen@cs.uu.nl>

	* VERSION: 1.5.55 released

	* lily/stem.cc (off_callback): invisible stem over whole note is
	centered on note now.

	* lily/stem-engraver.cc (acknowledge_grob): X_AXIS Parent of
	stem-tremolo is stem now.

	* input/mozart-hrn*.ly: many corrections. 

	* lily/dynamic-engraver.cc (acknowledge_grob): add Scripts  to
	support for dynamic scripts.

	* lily/accidental-placement.cc (position_accidentals): check for
	collisions as well: should avoid those heads too.

	* lily/beam.cc (check_concave): allow undefined gap and
	threshold. Change the meaning of threshold/gap == 0.0.
	(check_concave): skip Stolba concaveness check if we have a knee
	on outer stems.

2002-05-03  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* lily/chord-tremolo-engraver.cc (try_music): Handle chord
	tremolos of dotted duration.

2002-05-03  Han-Wen  <hanwen@cs.uu.nl>

	* mf/feta-klef.mf: more twiddling with G clef. Almost straight
	downstroke again. Sigh.

	* lily/dynamic-engraver.cc (acknowledge_grob): center dynamic
	script on note head.

2002-05-02  Han-Wen  <hanwen@cs.uu.nl>

	* lily/slur.cc (add_column): allow slur over rest. 

2002-04-27  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam.cc: move scoring constants out of code

2002-04-25  Han-Wen  <hanwen@cs.uu.nl>

	* mf/feta-nummer.mf: scalability fixes.

	* mf/feta-nummer-code.mf: fixes for 5, 8. 

	* mf/feta-klef.mf: G clef fixes.

2002-04-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/ly2dvi.py: Mats' fix.  Try to import pre if available.

	* scripts/lilypond-book.py: %Newline, rather than glue macros
	after \end{verbatim}.

2002-04-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/lilypond-book.itely: 
	* scripts/lilypond-book.py: Add options [no]indent, linewidth and
	noinline.

	* input/mozart-hrn3-defs.ly (startGraceContext): Customize grace init.

	* scm/grob-property-description.scm (beam-space): Junk.

	* lily/beam.cc (space_function): New method.