@@ -7,6 +7,8 @@ To avoid confusion, chord tremolo beams do not reach the stems, but
 leave a gap.  Chord tremolo beams on half notes are not ambiguous,
 as half notes cannot appear in a regular beam, and should reach the 
 stems.
+
+(To ensure that the spacing engine is not confused we add some regular notes as well.) 
 "
 }
   
@@ -22,6 +24,10 @@ stems.
 	\repeat "tremolo" 4 { f'8 e }
 	\repeat "tremolo" 2 { f e }    
 	\repeat "tremolo" 1 { f e }
+	c4 c4 c4 c4
+	c4 c4 c4 c4
+	c4 c4 c4 c4
+
   }
   \paper {
     linewidth = 90*\staffspace
