@@ -7,7 +7,6 @@
   
  */
 
-
 #include "system-start-delimiter.hh"
 #include "engraver.hh"
 #include "staff-symbol.hh"
@@ -49,11 +48,11 @@ System_start_delimiter_engraver::acknowledge_grob (Grob_info inf)
       /*
 	UGH UGH
        */
-      if (gh_string_p (gl) && gh_equal_p (gl, gh_str02scm  ("brace"))
-	  && gh_string_p (my_gl) && gh_equal_p (my_gl, gh_str02scm  ("bracket")))
+      if (gh_string_p (gl) && gh_equal_p (gl, ly_str02scm  ("brace"))
+	  && gh_string_p (my_gl) && gh_equal_p (my_gl, ly_str02scm  ("bracket")))
 	inf.grob_l_->translate_axis (-0.8, X_AXIS); // ugh
-      else if (gh_string_p (gl) && gh_equal_p (gl, gh_str02scm  ("bracket"))
-	       && gh_string_p (my_gl) && gh_equal_p (my_gl, gh_str02scm  ("bracket")))
+      else if (gh_string_p (gl) && gh_equal_p (gl, ly_str02scm  ("bracket"))
+	       && gh_string_p (my_gl) && gh_equal_p (my_gl, ly_str02scm  ("bracket")))
        {
          inf.grob_l_->translate_axis ( -0.8, X_AXIS); // ugh
          inf.grob_l_->set_grob_property ("arch-height",
@@ -75,8 +74,6 @@ System_start_delimiter_engraver::initialize ()
   delim_ = new Spanner (internal_get_property (delim_name));
 
   delim_->set_bound (LEFT, unsmob_grob (get_property ("currentCommandColumn")));
-
-
   announce_grob (delim_, SCM_EOL);
 }
 
@@ -88,7 +85,7 @@ System_start_delimiter_engraver::finalize ()
 }
 
 ENTER_DESCRIPTION(System_start_delimiter_engraver,
-/* descr */       "creates a system start delimiter (ie. SystemStart@{Bar,Brace,Bracket@} spanner",
+/* descr */       "Creates a system start delimiter (ie. SystemStart@{Bar,Brace,Bracket@} spanner",
 /* creats*/       "SystemStartBar SystemStartBrace SystemStartBracket",
 /* acks  */       "system-start-delimiter-interface staff-symbol-interface",
 /* reads */       "systemStartDelimiter",
