@@ -1,5 +1,11 @@
 2002-05-04  Han-Wen  <hanwen@cs.uu.nl>
 
+	* lily/*.cc: change gh_str02scm() to ly_str02scm().
+
+	* lily/spacing-spanner.cc (note_spacing): Bound
+	shortest-playing-length by the distance to next note. This should
+	fix chord tremolo spacing.
+
 	* VERSION: 1.5.55 released
 
 	* lily/stem.cc (off_callback): invisible stem over whole note is
